feat: consolidate pending workspace work on learning-loop branch
Collects all uncommitted changes from parallel development sessions:
- handout runtime hardening (evidence, retrieval, workflow resume, SSE framing)
- Java teaching/agent/backend and Dockerfile/pom updates
- frontend workbench and panel updates
- test updates across python worker suites